--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,30 @@
     "[python]": {
       "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#fe86e1",
+        "activityBar.background": "#fe86e1",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#effec0",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#15202b99",
+        "editorGroup.border": "#fe86e1",
+        "panel.border": "#fe86e1",
+        "sash.hoverBorder": "#fe86e1",
+        "sideBar.border": "#fe86e1",
+        "statusBar.background": "#fd54d4",
+        "statusBar.border": "#fd54d4",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#fc22c7",
+        "statusBarItem.remoteBackground": "#fd54d4",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#fd54d4",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.border": "#fd54d4",
+        "titleBar.inactiveBackground": "#fd54d499",
+        "titleBar.inactiveForeground": "#15202b99"
+    },
+    "peacock.color": "#fd54d4"
   }
-  
