--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: "Streaming Camera Tag Detection"
-url: https://github.com/tmick0/ha-cam-tag
-maintainer: Travis Mick (tmick0)
+url: https://github.com/joecstarr/ha-cam-tag
+maintainer: Joe Starr
